Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111325

Crash at destruction when running Scene3D in QQuickView

    XMLWordPrintable

Details

    • Linux/X11
    • 2c3ebe01c (dev), 3b24faf00 (6.5)

    Description

      When the Qt application is closed with QDialog as the main window main and Scene3D inside QQuickView a seg fault is generated. The QDialog has an attribute (Qt::WA_DeleteOnClose) set.

      To reproduce the issue please run the attached example project and close the application (main dialog).

      Attachments

        For Gerrit Dashboard: QTBUG-111325
        # Subject Branch Project Status CR V

        Activity

          People

            seanharmer Sean Harmer
            tuomas.vaarala Tuomas Vaarala
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes